Website v2 and logbook V3
Added new logbook entry and continuid working on my website

--- a/website/WebsiteProject.html
+++ b/website/WebsiteProject.html
@@ -11,11 +11,20 @@
   <!--<script language="javascript" src="libraries/p5.dom.js"></script>-->
   <!--<script language="javascript" src="libraries/p5.sound.js"></script>-->
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
-  <!-- this line removes any default padding and style. you might only need one of these values set. -->
+
 </head>
 <body>
 
+    <ul>
+    <li> welcom</li>
+    <li>wie ben ik</li>
+    <li>wat doe ik</li>
+    <li>wat houd mijn project in</li>
+    <li> breakdown van project</li>
+    <li>extra's</li>
+    </ul>
 
 
 </body>
 </html>
+
