--- a/website/WebsiteProject.html
+++ b/website/WebsiteProject.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>website project </title>
-	<meta name="Author" content=""/>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="Welcom.css">
     
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
   <!-- uncomment lines below to include extra p5 libraries -->
@@ -21,8 +20,13 @@
     <li>wat doe ik</li>
     <li>wat houd mijn project in</li>
     <li> breakdown van project</li>
+    <li>contact</li>
     <li>extra's</li>
     </ul>
+    <div class="begin">
+    <p class="welcom">Welcom op mijn website</p>
+    <p class= "inleiding">Op deze website gaat u meer uitleg vinden over mij , mijn project enzo voort</p>
+    </div>    
 
 
 </body>
